Initial change files

--- a/index.html
+++ b/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
     <html lang="en" lang="en">
         <head>
-            <title>Rock, Paper, Scissors Changelog</title>
+            <title>Point and Click Changelog</title>
         </head>
         <body>
-            <h1>Rock, Paper, Scissors Changelog</h1>
-            <h3>Version 1</h3>
+            <h1>Point and Click Game Changelog</h1>
+            <h3>Version 0.01</h3>
+			<h4>This verison added:</h4>
             <ul>
                 <li>Initial Game Files</li>
+            </ul>
+			<h3>Version 0.02</h3>
+			<h4>This verison added:</h4>
+            <ul>
+                <li>Title element</li>
+            </ul>
+			<h3>Version 0.03</h3>
+			<h4>This verison added:</h4>
+            <ul>
+                <li>Index files</li>
+				<li>Changed names of files</li>
+				<li>Changed src link to files</li>
+            </ul>
+			<h4>This verison removed:</h4>
+            <ul>
+                <li>Other files that where named 2 in favor of index name</li>
             </ul>
         </body>
     </html>
